--- a/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj
+++ b/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\similarImage.cpp" />
+    <ClCompile Include="..\common\SQLiteDB.cpp" />
     <ClCompile Include="CreateImageHash.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -102,7 +103,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\opencv\lib\Debug;$(MY_X86_DEBUG_LIBS);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>myFileDirDll.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;TCPUtils.lib;ws2_32.lib;sqlite3.lib;Shell32.lib;user32.lib;Gdi32.lib;</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -117,8 +118,8 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\opencv\lib\Debug\x64;$(MY_X64_DEBUG_LIBS);C:\SQLite3\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>myFileDirDll.lib;ws2_32.lib;sqlite3.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_objdetect300d.lib;opencv_flann300d.lib;opencv_imgcodecs300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\opencv\lib\Debug\x64;$(MY_X64_DEBUG_LIBS);..\SQLite3\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;TCPUtils.lib;ws2_32.lib;sqlite3.lib;Shell32.lib;user32.lib;Gdi32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_objdetect300d.lib;opencv_imgcodecs300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_flann300d.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -137,7 +138,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>myFileDirDll.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;TCPUtils.lib;ws2_32.lib;sqlite3.lib;Shell32.lib;user32.lib;Gdi32.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(MY_X86_RELEASE_LIBS);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -158,7 +159,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(MY_X64_RELEASE_LIBS);C:\opencv\lib\Release\x64;C:\SQLite3\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>myFileDirDll.lib;ws2_32.lib;sqlite3.lib;opencv_core300.lib;opencv_imgproc300.lib;opencv_highgui300.lib;opencv_ml300.lib;opencv_features2d300.lib;opencv_calib3d300.lib;opencv_objdetect300.lib;opencv_flann300.lib;opencv_imgcodecs300.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;TCPUtils.lib;ws2_32.lib;sqlite3.lib;Shell32.lib;user32.lib;Gdi32.lib;</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
