--- a/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj.filters
+++ b/SmartCatalogue/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="..\common\similarImage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\common\SQLiteDB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
