--- a/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
+++ b/SmartCatalogue/DataBaseBuilder/DataBaseBuilder.vcxproj
@@ -98,7 +98,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib;ws2_32.lib;Advapi32.lib;user32.lib</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;TCPUtils.lib;LogUtils.lib;HashUtils.lib;CFGUtils.lib;CommandLineUtils.lib;sqlite3.lib;ws2_32.lib;Advapi32.lib;Shell32.lib;user32.lib</AdditionalDependencies>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>
@@ -118,7 +118,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(MY_X64_DEBUG_LIBS);..\SQLite3\lib\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;sqlite3.lib;CFGUtils.lib;ws2_32.lib;Advapi32.lib;user32.lib</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;TCPUtils.lib;LogUtils.lib;HashUtils.lib;CFGUtils.lib;CommandLineUtils.lib;sqlite3.lib;ws2_32.lib;Advapi32.lib;Shell32.lib;user32.lib</AdditionalDependencies>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>
@@ -141,7 +141,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>myFileDirDll.lib;sqlite3.lib;CFGReaderDll.lib;ws2_32.lib;Advapi32.lib;user32.lib</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;TCPUtils.lib;LogUtils.lib;HashUtils.lib;CFGUtils.lib;CommandLineUtils.lib;sqlite3.lib;ws2_32.lib;Advapi32.lib;Shell32.lib;user32.lib</AdditionalDependencies>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>
@@ -165,7 +165,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(MY_X64_RELEASE_LIBS);..\SQLite3\lib\x64</AdditionalLibraryDirectories>
-      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;sqlite3.lib;CFGUtils.lib;ws2_32.lib;Advapi32.lib;user32.lib</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;TCPUtils.lib;LogUtils.lib;HashUtils.lib;CFGUtils.lib;CommandLineUtils.lib;sqlite3.lib;ws2_32.lib;Advapi32.lib;Shell32.lib;user32.lib</AdditionalDependencies>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>
