--- a/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj
+++ b/SmartCatalogue/DupeImageFinder/dupeImageFinder.vcxproj
@@ -88,12 +88,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;..\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_STRING_UTILS);$(MY_COMMANDLINE_UTILS);C:\opencv\build\include\;..\common\;..\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>comctl32.lib;myFileDirDll.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_objdetect300d.lib;opencv_flann300d.lib;opencv_imgcodecs300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;CommandLineUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_objdetect300d.lib;opencv_flann300d.lib;opencv_imgcodecs300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\myLibs\libs\debug;C:\opencv\lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -104,13 +104,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;..\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_STRING_UTILS);$(MY_COMMANDLINE_UTILS);C:\opencv\build\include\;..\common\;..\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\myLibs\libs\debug\x64;C:\opencv\lib\Debug\x64;C:\SQLite3\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>CFGReaderDll.lib;myFileDirDll.lib;comctl32.lib;sqlite3.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_objdetect300d.lib;opencv_flann300d.lib;opencv_imgcodecs300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(MY_X64_DEBUG_LIBS);C:\opencv\lib\Debug\x64;..\SQLite3\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;CommandLineUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_objdetect300d.lib;opencv_flann300d.lib;opencv_imgcodecs300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -122,14 +122,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;..\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_STRING_UTILS);$(MY_COMMANDLINE_UTILS);C:\opencv\build\include\;..\common\;..\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>comctl32.lib;myFileDirDll.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;CommandLineUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\myLibs\Libs\Release;C:\opencv\lib\Release</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -142,15 +142,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\opencv\build\include\;..\common\;..\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_CFG_UTILS);$(MY_STRING_UTILS);$(MY_COMMANDLINE_UTILS);C:\opencv\build\include\;..\common\;..\SQLite3\src;$(MY_FILE_UTILS);$(MY_WINDOWS_UTILS)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>CFGReaderDll.lib;myFileDirDll.lib;comctl32.lib;sqlite3.lib;opencv_core300.lib;opencv_imgproc300.lib;opencv_highgui300.lib;opencv_ml300.lib;opencv_features2d300.lib;opencv_calib3d300.lib;opencv_objdetect300.lib;opencv_flann300.lib;opencv_imgcodecs300.lib;opencv_face300.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\myLibs\Libs\Release\x64;C:\opencv\lib\Release\x64;C:\SQLite3\lib\x64</AdditionalLibraryDirectories>
+      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;CommandLineUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;opencv_core300.lib;opencv_imgproc300.lib;opencv_highgui300.lib;opencv_ml300.lib;opencv_features2d300.lib;opencv_calib3d300.lib;opencv_objdetect300.lib;opencv_flann300.lib;opencv_imgcodecs300.lib;opencv_face300.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(MY_X64_RELEASE_LIBS);C:\opencv\lib\Release\x64;..\SQLite3\lib\x64</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -162,6 +162,10 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\common\CFGHelper.cpp" />
+    <ClCompile Include="..\common\DatabaseControllercpp.cpp" />
+    <ClCompile Include="..\common\SQLiteDB.cpp" />
+    <ClCompile Include="..\common\WinToDBMiddleman.cpp" />
     <ClCompile Include="dupeImageFinder.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
