db lookup is starting to take shape

--- a/DBLookup/DBLookup.vcxproj.filters
+++ b/DBLookup/DBLookup.vcxproj.filters
@@ -38,6 +38,15 @@
     <ClCompile Include="DBLookup.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="selectOrDelete.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\DatabaseControllercpp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\SQLiteDB.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DBLookup.rc">
