--- a/DBLookup/DBLookup.vcxproj.filters
+++ b/DBLookup/DBLookup.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClCompile Include="..\common\SQLiteDB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\common\CFGHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DBLookup.rc">
