--- a/DBLookup/DBLookup.vcxproj
+++ b/DBLookup/DBLookup.vcxproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DBLookup.h" />
+    <ClInclude Include="ImgAttribLookup.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -164,7 +165,7 @@
     <ClCompile Include="..\common\DatabaseControllercpp.cpp" />
     <ClCompile Include="..\common\SQLiteDB.cpp" />
     <ClCompile Include="DBLookup.cpp" />
-    <ClCompile Include="selectOrDelete.cpp" />
+    <ClCompile Include="ImgAttribLookup.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
