project now builds under realse mode

--- a/DupeImageFinder/dupeImageFinder.vcxproj
+++ b/DupeImageFinder/dupeImageFinder.vcxproj
@@ -93,7 +93,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;CommandLineUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_objdetect300d.lib;opencv_flann300d.lib;opencv_imgcodecs300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_objdetect300d.lib;opencv_flann300d.lib;opencv_imgcodecs300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\myLibs\libs\debug;C:\opencv\lib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -110,7 +110,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(MY_X64_DEBUG_LIBS);C:\opencv\lib\Debug\x64;..\SQLite3\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;CommandLineUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_objdetect300d.lib;opencv_flann300d.lib;opencv_imgcodecs300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_objdetect300d.lib;opencv_flann300d.lib;opencv_imgcodecs300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -129,7 +129,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;CommandLineUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>C:\myLibs\Libs\Release;C:\opencv\lib\Release</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -149,7 +149,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;CommandLineUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;opencv_core300.lib;opencv_imgproc300.lib;opencv_highgui300.lib;opencv_ml300.lib;opencv_features2d300.lib;opencv_calib3d300.lib;opencv_objdetect300.lib;opencv_flann300.lib;opencv_imgcodecs300.lib;opencv_face300.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;WindowsUtils.lib;sqlite3.lib;comctl32.lib;opencv_core300.lib;opencv_imgproc300.lib;opencv_highgui300.lib;opencv_ml300.lib;opencv_features2d300.lib;opencv_calib3d300.lib;opencv_objdetect300.lib;opencv_flann300.lib;opencv_imgcodecs300.lib;opencv_face300.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(MY_X64_RELEASE_LIBS);C:\opencv\lib\Release\x64;..\SQLite3\lib\x64</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
