--- a/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj
+++ b/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj
@@ -24,7 +24,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\similarImage.cpp" />
-    <ClCompile Include="..\common\SQLiteDB.cpp" />
     <ClCompile Include="CreateImageHash.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -97,13 +96,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);$(MY_STRING_UTILS);$(MY_HASH_UTILS);C:\opencv\build\include\;..\common\;..\SQLite3\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);$(MY_STRING_UTILS);$(MY_SQLITE3_UTILS);$(MY_HASH_UTILS);C:\opencv\build\include\;..\common\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\opencv\lib\Debug;$(MY_X86_DEBUG_LIBS);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;TCPUtils.lib;ws2_32.lib;sqlite3.lib;Shell32.lib;user32.lib;Gdi32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;SQLiteUtils.lib;TCPUtils.lib;ws2_32.lib;Shell32.lib;user32.lib;Gdi32.lib;</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -113,13 +112,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);$(MY_STRING_UTILS);$(MY_HASH_UTILS);C:\opencv\build\include\;..\common\;..\SQLite3\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);$(MY_STRING_UTILS);$(MY_SQLITE3_UTILS);$(MY_HASH_UTILS);C:\opencv\build\include\;..\common\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\opencv\lib\Debug\x64;$(MY_X64_DEBUG_LIBS);..\SQLite3\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;TCPUtils.lib;ws2_32.lib;sqlite3.lib;Shell32.lib;user32.lib;Gdi32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_objdetect300d.lib;opencv_imgcodecs300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_flann300d.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\opencv\lib\Debug\x64;$(MY_X64_DEBUG_LIBS);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;SQLiteUtils.lib;TCPUtils.lib;ws2_32.lib;Shell32.lib;user32.lib;Gdi32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_objdetect300d.lib;opencv_imgcodecs300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_flann300d.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -131,14 +130,14 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);$(MY_STRING_UTILS);$(MY_HASH_UTILS);C:\opencv\build\include\;..\common\;..\SQLite3\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);$(MY_STRING_UTILS);$(MY_SQLITE3_UTILS);$(MY_HASH_UTILS);C:\opencv\build\include\;..\common\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;TCPUtils.lib;ws2_32.lib;sqlite3.lib;Shell32.lib;user32.lib;Gdi32.lib;</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;SQLiteUtils.lib;TCPUtils.lib;ws2_32.lib;Shell32.lib;user32.lib;Gdi32.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(MY_X86_RELEASE_LIBS);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -151,15 +150,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);$(MY_STRING_UTILS);$(MY_HASH_UTILS);C:\opencv\build\include\;..\common\;..\SQLite3\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(MY_TCP_UTILS);$(MY_COMMANDLINE_UTILS);$(MY_WINDOWS_UTILS);$(MY_FILE_UTILS);$(MY_STRING_UTILS);$(MY_SQLITE3_UTILS);$(MY_HASH_UTILS);C:\opencv\build\include\;..\common\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(MY_X64_RELEASE_LIBS);C:\opencv\lib\Release\x64;C:\SQLite3\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;TCPUtils.lib;ws2_32.lib;sqlite3.lib;Shell32.lib;user32.lib;Gdi32.lib;opencv_core300.lib;opencv_imgproc300.lib;opencv_objdetect300.lib;opencv_imgcodecs300.lib;opencv_features2d300.lib;opencv_calib3d300.lib;opencv_highgui300.lib;opencv_ml300.lib;opencv_flann300.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(MY_X64_RELEASE_LIBS);C:\opencv\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;SQLiteUtils.lib;TCPUtils.lib;ws2_32.lib;Shell32.lib;user32.lib;Gdi32.lib;opencv_core300.lib;opencv_imgproc300.lib;opencv_objdetect300.lib;opencv_imgcodecs300.lib;opencv_features2d300.lib;opencv_calib3d300.lib;opencv_highgui300.lib;opencv_ml300.lib;opencv_flann300.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
