--- a/DBLookup/DBLookup.vcxproj
+++ b/DBLookup/DBLookup.vcxproj
@@ -109,7 +109,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>StringUtils.lib;CFGUtils.lib;SQLiteUtils.lib;Comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;CFGUtils.lib;SQLiteUtils.lib;Comctl32.lib;sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(MY_X64_DEBUG_LIBS);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -149,7 +149,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>StringUtils.lib;CFGUtils.lib;SQLiteUtils.lib;Comctl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;CFGUtils.lib;SQLiteUtils.lib;Comctl32.lib;sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(MY_X64_RELEASE_LIBS);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -165,7 +165,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\CFGHelper.cpp" />
-    <ClCompile Include="..\common\DatabaseControllercpp.cpp" />
     <ClCompile Include="DBLookup.cpp" />
     <ClCompile Include="ImgAttribLookup.cpp" />
     <ClCompile Include="stdafx.cpp">
