--- a/DataBaseBuilder/DataBaseBuilder.vcxproj
+++ b/DataBaseBuilder/DataBaseBuilder.vcxproj
@@ -118,7 +118,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(MY_X64_DEBUG_LIBS)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;TCPUtils.lib;LogUtils.lib;HashUtils.lib;CFGUtils.lib;CommandLineUtils.lib;SQLiteUtils.lib;ws2_32.lib;Advapi32.lib;Shell32.lib;user32.lib</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;TCPUtils.lib;LogUtils.lib;HashUtils.lib;CFGUtils.lib;sqlite3.lib;CommandLineUtils.lib;SQLiteUtils.lib;ws2_32.lib;Advapi32.lib;Shell32.lib;user32.lib</AdditionalDependencies>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>
@@ -165,7 +165,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(MY_X64_RELEASE_LIBS)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;TCPUtils.lib;LogUtils.lib;HashUtils.lib;CFGUtils.lib;CommandLineUtils.lib;SQLiteUtils.lib;ws2_32.lib;Advapi32.lib;Shell32.lib;user32.lib</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;TCPUtils.lib;LogUtils.lib;HashUtils.lib;CFGUtils.lib;sqlite3.lib;CommandLineUtils.lib;SQLiteUtils.lib;ws2_32.lib;Advapi32.lib;Shell32.lib;user32.lib</AdditionalDependencies>
     </Link>
     <Manifest>
       <AdditionalManifestFiles>
@@ -186,7 +186,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\CFGHelper.cpp" />
-    <ClCompile Include="..\common\DatabaseControllercpp.cpp" />
     <ClCompile Include="..\common\WinToDBMiddleman.cpp" />
     <ClCompile Include="DatabaseBuilder.cpp" />
     <ClCompile Include="DataBaseManager.cpp" />
