--- a/DupeImageFinder/dupeImageFinder.vcxproj
+++ b/DupeImageFinder/dupeImageFinder.vcxproj
@@ -109,8 +109,8 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(MY_X64_DEBUG_LIBS);C:\opencv\lib\Debug\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;WindowsUtils.lib;SQLiteUtils.lib;comctl32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_objdetect300d.lib;opencv_flann300d.lib;opencv_imgcodecs300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(MY_X64_DEBUG_LIBS);C:\opencv\lib\Debug\x64;D:\source\Utils\SQLiteUtils\SQLite3\win32\lib\64bit;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;WindowsUtils.lib;SQLiteUtils.lib;comctl32.lib;sqlite3.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_objdetect300d.lib;opencv_flann300d.lib;opencv_imgcodecs300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -149,8 +149,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;WindowsUtils.lib;SQLiteUtils.lib;comctl32.lib;opencv_core300.lib;opencv_imgproc300.lib;opencv_highgui300.lib;opencv_ml300.lib;opencv_features2d300.lib;opencv_calib3d300.lib;opencv_objdetect300.lib;opencv_flann300.lib;opencv_imgcodecs300.lib;opencv_face300.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(MY_X64_RELEASE_LIBS);C:\opencv\lib\Release\x64</AdditionalLibraryDirectories>
+      <AdditionalDependencies>CFGUtils.lib;FileUtils.lib;StringUtils.lib;WindowsUtils.lib;SQLiteUtils.lib;comctl32.lib;sqlite3.lib;opencv_core300.lib;opencv_imgproc300.lib;opencv_highgui300.lib;opencv_ml300.lib;opencv_features2d300.lib;opencv_calib3d300.lib;opencv_objdetect300.lib;opencv_flann300.lib;opencv_imgcodecs300.lib;opencv_face300.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(MY_X64_RELEASE_LIBS);C:\opencv\lib\Release\x64;D:\source\Utils\SQLiteUtils\SQLite3\win32\lib\64bit</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -163,7 +163,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\common\CFGHelper.cpp" />
-    <ClCompile Include="..\common\DatabaseControllercpp.cpp" />
     <ClCompile Include="..\common\WinToDBMiddleman.cpp" />
     <ClCompile Include="dupeImageFinder.cpp" />
     <ClCompile Include="stdafx.cpp">
