--- a/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj
+++ b/SimilarImagesDetection/openCVDetectSimilarImage.vcxproj
@@ -118,7 +118,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\opencv\lib\Debug\x64;$(MY_X64_DEBUG_LIBS);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;SQLiteUtils.lib;TCPUtils.lib;ws2_32.lib;Shell32.lib;user32.lib;Gdi32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_objdetect300d.lib;opencv_imgcodecs300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_flann300d.lib</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;SQLiteUtils.lib;sqlite3.lib;TCPUtils.lib;ws2_32.lib;Shell32.lib;user32.lib;Gdi32.lib;opencv_core300d.lib;opencv_imgproc300d.lib;opencv_objdetect300d.lib;opencv_imgcodecs300d.lib;opencv_features2d300d.lib;opencv_calib3d300d.lib;opencv_highgui300d.lib;opencv_ml300d.lib;opencv_flann300d.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -158,7 +158,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>$(MY_X64_RELEASE_LIBS);C:\opencv\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;SQLiteUtils.lib;TCPUtils.lib;ws2_32.lib;Shell32.lib;user32.lib;Gdi32.lib;opencv_core300.lib;opencv_imgproc300.lib;opencv_objdetect300.lib;opencv_imgcodecs300.lib;opencv_features2d300.lib;opencv_calib3d300.lib;opencv_highgui300.lib;opencv_ml300.lib;opencv_flann300.lib</AdditionalDependencies>
+      <AdditionalDependencies>StringUtils.lib;FileUtils.lib;WindowsUtils.lib;CommandLineUtils.lib;SQLiteUtils.lib;sqlite3.lib;TCPUtils.lib;ws2_32.lib;Shell32.lib;user32.lib;Gdi32.lib;opencv_core300.lib;opencv_imgproc300.lib;opencv_objdetect300.lib;opencv_imgcodecs300.lib;opencv_features2d300.lib;opencv_calib3d300.lib;opencv_highgui300.lib;opencv_ml300.lib;opencv_flann300.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
